--- a/custom_components/vehicle_info/manifest.json
+++ b/custom_components/vehicle_info/manifest.json
@@ -1,10 +1,10 @@
 {
-    "domain": "vehicle_info",
-    "name": "Vehicle Info",
-    "version": "0.1.0",
-    "documentation": "https://github.com/Connect-Smart/ha-vehicle-info",
-    "requirements": ["python-vehicle==0.4.2"],
-    "dependencies": [],
-    "codeowners": ["@connect-smart"]
-  }
-  
+  "domain": "vehicle_info",
+  "name": "Vehicle Info",
+  "version": "0.1.2",
+  "documentation": "https://github.com/Connect-Smart/ha-vehicle-info",
+  "requirements": ["python-vehicle==0.4.2"],
+  "dependencies": [],
+  "codeowners": ["@connect-smart"],
+  "iot_class": "cloud_polling"
+}
