--- a/custom_components/vehicle_info/manifest.json
+++ b/custom_components/vehicle_info/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "vehicle_info",
   "name": "Vehicle Info",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "documentation": "https://github.com/Connect-Smart/ha-vehicle-info",
-  "requirements": ["python-vehicle==0.4.2"],
+  "requirements": ["vehicle==2.2.2"],
   "dependencies": [],
   "codeowners": ["@connect-smart"],
   "iot_class": "cloud_polling"
