use pip for simpler updates

--- a/custom_components/vehicle_info/manifest.json
+++ b/custom_components/vehicle_info/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "vehicle_info",
   "name": "Vehicle Info",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "documentation": "https://github.com/Connect-Smart/ha-vehicle-info",
-  "requirements": [],
+  "requirements": ["vehicle==2.2.2"],
   "dependencies": [],
   "codeowners": ["@connect-smart"],
   "iot_class": "cloud_polling"
